--- a/model_cnn.ipynb
+++ b/model_cnn.ipynb
@@ -1381,7 +1381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# predictions = model.predict(pred_img)"
+    "predictions = model.predict(pred_img)"
    ]
   },
   {
